# intuiter

./: .gitattributes  .gitignore  .prettierrc  AppXManifest.xml  CHANGELOG.md  LICENSE  MIGRATION-ELECTRON-VITE.md  MIGRATION-TAURI.md  README.md  appx.js  builder.config.js  electron-vite.config.ts  index.html  package-lock.json  package.electron-vite.json  package.json  package.tauri.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts  vue.config.js
.electron-nuxt/: check-engines.js  config.js  index.js  resources-path-provider.js
.electron-nuxt/renderer/: NuxtApp.js  do-nothing-loader.js  nuxt-process.js  nuxt.config.js
.github/: CODEOWNERS  FUNDING.yml  branch-convention.md  commit-convention.md  pull_request_template.md  renovate.json5  restyled.yml  semantic.yml  settings.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_others.yml
.github/workflows/: cache.yaml  cd.yaml  ci.yaml  codeql-analysis.yml  release.yaml  semgrep.yml
docs/versions/: 0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md
nsis/: remove_startup.nsh
public/: index.html
resources/: default.ini
resources/ahk/: LICENSE  README.md  default.ahk  make.ahk  runner.ahk  tempCodeRunnerFile.ahk
src/: App.vue  background.js  index.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-vue/: App.vue
src-vue/assets/: default.css
src/components/: LandingPage.vue  MakeSpace.vue  OptionSpace.vue  SideBar.vue
src/comps/: MakeSpace.vue
src/install/: remove_startup.nsh
src/main/: BrowserWinHandler.js  index.dev.js  index.js  index.ts  (+2 more)
(+67 files in other folders)
